--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,222 @@
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    font-family: arial, helvetica;
-    color: #333;
-    font-size: 1.2rem;
-    line-height: 1.4em;
-    background: #e8e8e8;
-    margin: 0;
-}
-
-.container {
-    width: 100%;
-    padding: 0 15px;
-    /* max-width: 10000px; */
-    margin: auto;
-}
-
-.section {
-    width: 100%;
-    height: 500px;
-    padding: 0 15px;
-    margin: auto;
-}
-
-#home {
-    background: url(./../image/gio_barreto.jpg) no-repeat 0 0 transparent 100%;
-    background-size: cover;
-}
-
-.hero-img {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
-}
-
-#about_me {
-    display: flex;
-}
-
-p {
-    margin-bottom: 1.6em;
-}
-
+        /* HTML */
+        
+        html {
+            scroll-behavior: smooth;
+        }
+        
+        body {
+            font-family: arial, helvetica;
+            color: #333;
+            font-size: 1.2rem;
+            line-height: 1.6em;
+            background: #e8e8e8;
+            margin: 0;
+        }
+        
+        img {
+            width: 100%;
+        }
+        /* HEADER */
+        
 .header {
-    background: #1D2F54;
-    color: white;
-    padding: 2rem 0;
-}
+            background: #1D2F54;
+            color: white;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
+            box-shadow: 0px 1px 0px rgb(68, 68, 68);
+        }
+        
+        .header a {
+            color: white;
+            text-decoration: none;
+        }
+        
+    .container {
+            width: 90%;
+            margin: 0 auto;
+        }
+        
+        .logo-nav-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
+        .navigation ul {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+        }
+        
+        .navigation ul li {
+            display: inline-block;
+        }
+        
+        .navigation ul li a {
+            display: block;
+            padding: 0.5rem .5rem;
+            transition: all 0.4s linear;
+            border-radius: 5px;
+            font-size: 20px;
+            text-transform: uppercase;
+        }
+        
+        .navigation ul li a:hover {
+            background: #5A709D;
+        }
+        
+    .logo {
+            padding-left: 0;
+            width: 20rem;
+        }
+        /* BODY */
+        
+.main {
+            padding-top: 6rem;
+        }
+        
+    .hero-img {
+            width: 100%;
+            top: 0;
+        }
+        
+    .section-one {
+            display: flex;
+            background-image: url(./../img/back1.png);
+            background-size: cover;
+            width: 100%;
+            height: 480px;
+        }
+        
+        .slider {
+            width: 50%;
+            overflow: hidden;
+        }
+        
+        .slider ul {
+            display: flex;
+            padding: 0;
+            width: 300%;
+            animation: change 20s infinite;
+            margin-top: 0;
+        }
+        
+        .slider li {
+            width: 100%;
+            height: 100%;
+            list-style: none;
+        }
+        
+        .slider img {
+            width: 100%;
+            height: 100%;
+        }
+        
+        @keyframes change {
+            0% {
+                margin-left: 0;
+            }
+            15% {
+                margin-left: 0;
+            }
+            20% {
+                margin-left: -100%;
+            }
+            35% {
+                margin-left: -100%;
+            }
+            40% {
+                margin-left: -200%;
+            }
+            55% {
+                margin-left: -200%;
+            }
+            60% {
+                margin-left: -100%;
+            }
+            75% {
+                margin-left: -100%;
+            }
+            85% {
+                margin-left: 0;
+            }
+            100% {
+                margin-left: 0;
+            }
+        }
+        
+        .box-text-1 {
+            background-image: url(img/back1.jpg);
+            background-size: cover;
+            color: white;
+            width: 50%;
+            height: 500px;
+        }
+        
+        .box-text-1 h2 {
+            text-align: left;
+            padding-top: 6rem;
+            padding-left: 4rem;
+            font-family: avenir;
+            font-size: 4rem;
+            text-transform: uppercase;
+        }
+        
+        .box-text-1 p {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+        
+    .section-two {
+            background-color: rgb(81, 112, 188);
+            width: 100%;
+            height: 500px;
+            color: white;
+            margin-top: -3.35rem;
+            text-align: center;
+        }
+        
+        .section-two h2 {
+            padding-top: 10rem;
+            font-family: avenir;
+            font-size: 4rem;
+            text-transform: uppercase;
+        }
+        
+        .section-two p {
+            padding-left: 10rem;
+            padding-right: 10rem;
+        }
 
-.header a {
-    color: white;
-    text-decoration: none;
-}
-
-.logo-nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
-/* .logo {
-    letter-spacing
-} */
-
-.navigation ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.navigation ul li {
-    display: inline-block;
-}
-
-.navigation ul li a {
-    display: block;
-    padding: 0.5rem 1rem;
-    transition: all 0.4s linear;
-    border-radius: 5px;
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
-.navigation ul li a:hover {
-    background: #5A709D;
-}
-
-.footer {
-    background: #CCD4D5;
-    padding: 4rem 0;
-    text-align: center;
-    margin-top: 6rem;
-}
-
-.gioim {}
+    .section-tree {
+            background-color: #CCD4D5;
+            width: 100%;
+            height: 500px;
+        }
+        
+        .section-tree h2 {
+            padding-top: 4rem;
+            padding-left: 4rem;
+            font-family: avenir;
+            font-size: 4rem;
+            text-transform: uppercase;
+        }
+        
+    .section-four {
+            background-color: #1D2F54;
+            width: 100%;
+            height: 500px;
+        }
+        
+        p {
+            margin-bottom: 1.6em;
+        }
+        
+    .footer {
+            background: #CCD4D5;
+            padding: 4rem 0;
+            text-align: center;
+            margin-top: -1rem;
+        }
